--- a/myproject/nginx/nginx.conf
+++ b/myproject/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-        server_name {{_}};
+        server_name _;
 
     location / {
         proxy_pass http://web:8000;
